--- a/Starbucks clone/style.css
+++ b/Starbucks clone/style.css
@@ -94,5 +94,13 @@ header ul li a
 
 .content .textBox a
 {
-    
+    display: inline-block;
+    margin-top: 20px;
+    padding: 8px, 20px;
+    background: #017143;
+    color: #fff;
+    border-radius: 40px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-decoration: none;
 }
