--- a/Starbucks clone/style.css
+++ b/Starbucks clone/style.css
@@ -101,6 +101,15 @@ header ul li a
     color: #fff;
     border-radius: 40px;
     font-weight: 500;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     text-decoration: none;
+}
+
+.content .imgBox
+{
+    width: 600px;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 50px;
+    margin-top: 50px;
 }
