--- a/Starbucks clone/style.css
+++ b/Starbucks clone/style.css
@@ -100,3 +100,26 @@ header ul li a
     padding-right: 50px;
     margin-top: 50px;
 }
+.thumb
+{
+    position: relative;
+    left: 50%;
+    bottom:  20px;
+    transform: translateX(-50%);
+    display: flex;
+}
+.thumb li
+{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    cursor: pointer;
+}
+.thumb li:hover
+{
+    transform: translateX(-15px);
+}
+.thumb li img
+{
+    max-width: 60px;
+}
