--- a/Starbucks clone/style.css
+++ b/Starbucks clone/style.css
@@ -102,7 +102,7 @@ header ul li a
 }
 .thumb
 {
-    position: relative;
+    position: absolute;
     left: 50%;
     bottom:  20px;
     transform: translateX(-50%);
@@ -114,6 +114,7 @@ header ul li a
     display: inline-block;
     margin: 0 20px;
     cursor: pointer;
+    transition: 0.5s;
 }
 .thumb li:hover
 {
