--- a/Starbucks clone/style.css
+++ b/Starbucks clone/style.css
@@ -32,6 +32,7 @@ header .logo
 {
     position: relative;
     max-width: 80px;
+    padding: 20px;
 }
 header ul
 {
@@ -49,6 +50,7 @@ header ul li a
     font-weight: 400;
     margin-left: 60px;
     text-decoration: none;
+    padding: 20px;
 }
 .content
 {
@@ -89,7 +91,7 @@ header ul li a
     color: #fff;
     border-radius: 40px;
     font-weight: 500;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-decoration: none;
 }
 .content .imgBox
